--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -1,27 +1,50 @@
 .footer{
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     padding: 20px 8%;
     /* background-color: antiquewhite; */
+    justify-content: space-between;
+    align-items: center;
 }
-
+/* 
 .footer-logo{
     width: 25%;
     cursor: pointer;
-}
+} */
 
 .footer-menu{
     flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.footer-list1{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-list1 ul{
+    display: flex;
+    flex-direction: column;
+    /* margin: 0;
+    padding: 0; */
+}
+
+.footer-list2{
+    display: flex;
+    flex-direction: column;
+    /* margin: 0;
+    padding: 0; */
 }
 
 .footer-menu ul{
-    column-count: 2;
     column-gap: 5px;
+    margin: 0;
+    padding: 0;
 }
 .footer-menu ul li{
     list-style: none;
-    /* display: inline-block;
-    margin: 0 20px; */
 }
 
 .footer-menu ul li a{
@@ -35,10 +58,42 @@
 .social{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
 .social-icon{
     color:#03a757;
-    margin-right: 20px;
+    /* margin-right: 20px; */
     cursor: pointer;
+}
+
+@media(max-width:480px){
+    .footer{
+        flex-direction: column;
+    }
+
+    .footer-menu{
+        align-self: center;
+        display: flex;
+        gap: 5rem;
+    }
+
+    /* .footer-list1{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    } */
+
+    .footer-list1 ul{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .footer-list2 ul{
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+    }
 }
