--- a/src/component/main/main.css
+++ b/src/component/main/main.css
@@ -1,3 +1,31 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+}
+
+/* TYPOGRAPHY */
+*{
+  font-size: 1.1rem;
+}
+
+@media(max-width:480px) {
+  *{
+    font-size: 1.2rem;
+
+  }
+}
+
+
+
 .hero{
     background-image: url("../../../public/images/herobg.jpg");
     background-size:cover;
@@ -11,12 +39,6 @@
     width: 25%;
 }
 
-/* .hero-title h2{
-    position:absolute;
-    top: 250px;
-    left: 50px;
-} */
-
 .hero-img{
     width:50%;
     margin: 0 auto;
@@ -28,7 +50,6 @@
     background-size: cover;
     text-align: center;
     padding:8rem 2rem;
-    /* justify-content: space-evenly; */
 }
 
 .items{
@@ -112,6 +133,55 @@
  }
 
  .recipe img, .stories img{
-    /* align-items: center; */
     width: 100%;
  }
+
+@media (max-width: 780px) {
+  /* styles for screens with max-width of 780px */
+  
+  .hero {
+    flex-direction: column;
+    background-image: none;
+  }
+  
+  .hero-title {
+    text-align: center;
+    display: none;
+  }
+
+  .hero-img-2{
+    margin-top: 1rem;
+    text-align: center;
+    max-width: 100%;
+  }
+  
+  .products {
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 2rem;
+  }
+  
+  .items {
+    margin-bottom: 1.5rem;
+    border: 1px solid #fff;
+    padding: 1rem;
+  }
+  
+  .about-us {
+    text-align: center;
+  }
+  
+  .about-us-bg {
+    display: none;
+  }
+  
+  .container3 {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .recipe,
+  .stories {
+    margin-bottom: 20px;
+  }
+}
