--- a/src/ourfood.css
+++ b/src/ourfood.css
@@ -1,13 +1,8 @@
 .product-list{
     padding: 1rem;
-    /* display: flex; */
-    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     text-align: center;
-
-    /* position:relative;
-    padding-bottom: 50%; */
 }
 
 .header,.product-list{
@@ -16,7 +11,6 @@
 }
 
 .product-card{
-    /* max-width: 1265px; */
     width: 22%;
     display: inline-block;
     text-align: center;
@@ -74,9 +68,6 @@
     float: left;
     margin: 1rem 1rem;
     margin-right:3rem;
-    /* width:50%;
-    height:50%; */
-    /* padding:1rem 1rem; */
 }
 
 .popup-img img{
@@ -87,4 +78,58 @@
 .pop-item-detail p{
     /* float: right; */
     margin: 0 2rem;
+}
+
+@media(max-width:480px) {
+    .product-list{
+        display:flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        padding: 1rem 0 0 0;
+    }
+
+    .product-card{
+        flex-basis: calc(50% - 50px);
+        border: 1px solid black;
+        margin: 0.1rem;
+        width: 8rem;
+    }
+
+    .product-img{
+        height: 7rem;
+        width: 7rem;
+    }
+
+    h4{
+        margin: 0;
+        font-size: 0.9rem;
+    }
+
+    .product-card a button{
+        margin-bottom: 1rem;
+        padding: 0.3rem 0.5rem;
+        font-size: 1rem;
+    }
+
+    .popup-body{
+        width: 90%;
+        height: 95%;
+        background-color: #fff;
+        margin: auto;
+        padding: 0;
+        
+    }
+
+    .popup-header{
+        /* width: 98%;
+        text-align: right;
+        margin:0; */
+        position: absolute;
+        top: 4rem;
+        right: 2rem;
+    }
+
+    .popup-header button{
+        font-size: 1.5rem;
+    }
 }
