main page change background, align last page of main in column

--- a/src/component/footer/footer.css
+++ b/src/component/footer/footer.css
@@ -76,7 +76,8 @@
     .footer-menu{
         align-self: center;
         display: flex;
-        gap: 5rem;
+        gap: 4rem;
+        margin-bottom: 1rem;
     }
 
     /* .footer-list1{
@@ -95,5 +96,9 @@
         display: flex;
         flex-direction: column;
         padding: 0;
+    }
+
+    .footer-menu ul li a{
+        font-size: 0.7rem;
     }
 }
