--- a/src/ourfood.css
+++ b/src/ourfood.css
@@ -89,10 +89,17 @@
     }
 
     .product-card{
-        flex-basis: calc(50% - 50px);
+        /* flex-basis: calc(50% - 50px);
         border: 1px solid black;
         margin: 0.1rem;
+        width: 8rem; */
+        border: 1px solid #d1caca;
+        flex-basis: calc(50% - 50px);
+        /* margin: 0.1rem; */
         width: 8rem;
+        box-sizing: border-box;
+        flex: 0 0 25%;
+        padding: 0.5rem;
     }
 
     .product-img{
