add contact page

--- a/src/aboutus.css
+++ b/src/aboutus.css
@@ -8,17 +8,14 @@
   h1 {
     font-size: 40px;
     color:#03a757;
-    /* font-weight: bold; */
-    /* margin-bottom: 30px; */
   }
   
   .about-us-page p {
     margin-bottom: 1rem;
-    /* font-size: 15px; */
     line-height: 1.5;
     text-align: left;
-    color:#03a757;
-    /* align-items: left; */
+    color:#000;
+ 
   }
   
   @media(max-width:480px){
