--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -34,23 +34,26 @@ h1{
 }
 
 .menu ul li{
-    margin: 0 2rem;
+    margin: 0 1rem;
 }
 
 .menu ul li a{
     text-decoration: none;
     color:#03a757;
+    /* background-color: aqua; */
+    padding: 5px 10px;
 }
 
 .menu-icon{
     display: none;
 }
 
-/* .search{
-    width: 150px;
-    color:#03a757;
-    padding: 0 20px;
-} */
+
+.menu ul li a:hover{
+    background-color: #43c888;
+    color: #fff;
+    border-radius: 2px;
+}
 
 @media(max-width:480px){
     .header{
@@ -80,7 +83,7 @@ h1{
     } */
     nav ul li {
         font-size: 2.5rem;
-        font-weight: 500;
+        font-weight: bold;
         line-height: 1.5;
     }
     .menu.show {
