--- a/src/recipe.css
+++ b/src/recipe.css
@@ -6,17 +6,17 @@
     padding: 20px;
     margin-bottom: 20px;
     background-color: #fff;
-
+  overflow: auto;
   }
 
   .recipe-img{
     float: left;
+    width: 30%;
   }
   
   .recipe-img img {
-    width: 70%;
-    height: auto;
-    margin-bottom: 10px;
+    height: 10rem;
+    margin-right: 3rem;
   }
   
   .recipe-card h3 {
@@ -39,8 +39,11 @@
   }
   
   .full-recipe{
-    margin-left: 80%;
+    margin-top: 2rem;
   }
+  .full-recipe a button:hover{
+    background-color: #43c888;
+    }
 
   .full-recipe a {
     text-decoration: none;
@@ -54,18 +57,29 @@
     cursor: pointer;
   }
 
-  @media(max-width:480px){
+  .recipe-detail{
+    width: 70%;
+    float: right;
+  }
 
-    .recipe-img{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      float: none;
-    }
-/*     
-    .recipe-img img{
-    
-    } */
+  @media(max-width:480px){
+.recipe-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.recipe-img{
+  float: none;
+}
+
+.recipe-img img{
+  margin: 0;
+}
+
+.recipe-detail{
+  width: auto;
+}    
+
 .recipe-detail h3{
   text-align: center;
 }
@@ -73,5 +87,13 @@
 .full-recipe{
   margin: 0;
   text-align: center;
+}
+
+.recipe-img{
+  width: auto;
+}
+
+button{
+  margin-top: 2rem;
 }
   }
