--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -17,7 +17,7 @@ h1{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.5rem 2rem;
+    padding: 1rem 0 0 0;
 }
 
 .menu{
